<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_category_account_title">

        <Preference
            android:key="current_account"
            android:title="@string/settings_current_account_title"
            android:summary="@string/settings_current_account_none_summary"
            android:selectable="false" />

        <EditTextPreference
            android:key="f1_username"
            android:title="@string/settings_f1_username_title"
            android:inputType="textEmailAddress"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="f1_password"
            android:title="@string/settings_f1_password_title"
            android:inputType="textPassword"
            android:summary="●●●●●●●●" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_player_title">

        <SwitchPreference
            android:key="bypass_channel_selection"
            android:title="@string/settings_bypass_channel_selection_title"
            android:summary="@string/settings_bypass_channel_selection_summary"/>

        <SwitchPreference
            android:key="open_with_external_player"
            android:title="@string/settings_open_with_external_player_title"
            android:summary="@string/settings_open_with_external_player_summary"/>

        <SwitchPreference
            android:key="display_thumbnails_enabled"
            android:title="@string/settings_display_thumbnails_enabled_title"
            android:summary="@string/settings_display_thumbnails_enabled_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="disable_uhd_manifests"
            android:title="@string/settings_disable_uhd_manifests_title"
            android:summary="@string/settings_disable_uhd_manifests_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="force_sdr_tone_mapping"
            app:title="@string/settings_disable_hdr_on_4k_streams_title"
            app:summary="@string/settings_disable_hdr_on_4k_streams_summary"
            app:defaultValue="false" />

        <ListPreference
            android:key="audio_offset_ms"
            android:title="@string/settings_audio_offset_ms_title"
            android:summary="%s"
            android:entries="@array/audio_offset_entries"
            android:entryValues="@array/audio_offset_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="custom_radio_delay_ms"
            android:title="@string/settings_custom_radio_delay_title"
            android:summary="%s"
            android:entries="@array/custom_radio_delay_entries"
            android:entryValues="@array/custom_radio_delay_values"
            android:defaultValue="20000" />

        <EditTextPreference
            android:key="custom_radio_url"
            android:title="@string/settings_custom_radio_url_title"
            android:summary="@string/settings_custom_radio_url_summary"
            android:inputType="textUri"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:key="auto_select_custom_radio"
            android:title="@string/settings_auto_select_custom_radio_title"
            android:summary="@string/settings_auto_select_custom_radio_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="restrict_custom_radio_to_live_sessions"
            android:title="@string/settings_restrict_custom_radio_to_live_sessions_title"
            android:summary="@string/settings_restrict_custom_radio_to_live_sessions_summary"
            android:defaultValue="true" />

        <Preference
            android:key="reset_settings"
            android:title="@string/settings_reset_to_default_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_other_title">

        <ListPreference
            android:key="app_locale"
            android:title="@string/settings_app_locale_title"
            android:summary="%s"
            android:entries="@array/app_locale_entries"
            android:entryValues="@array/app_locale_values"
            android:defaultValue="system" />

        <Preference
            android:key="donations"
            android:title="@string/settings_donations_title"
            android:summary="@string/settings_donations_summary"/>

        <Preference
            android:key="logout"
            android:title="@string/settings_logout_title"/>

    </PreferenceCategory>

</PreferenceScreen>